--- a/installIdentity.yaml
+++ b/installIdentity.yaml
@@ -1,8 +1,8 @@
 ---
-- hosts: k8s_nodes
+- hosts: 'windows dcs'
   roles:
     - role: cyberark.conjur-host-identity
-      conjur_appliance_url: 'https://conjur-master/api'
-      conjur_account: 'cyberark'
+      conjur_appliance_url: 'https://master.nate.lab/api'
+      conjur_account: 'CYBR'
       conjur_host_factory_token: '3d4rgcbq1an3b10rkq471tnn5jt1rfn23y2r56e0try9fen143xhd7'
-      conjur_host_name: "awx_{{inventory_hostname}}"
+      conjur_host_name: "{{inventory_hostname}}"
